<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/provider_tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:tabIndicatorColor="#FFFFFF"
        app:tabIndicatorGravity="bottom"
        app:tabInlineLabel="true"
        app:tabMode="fixed"
        app:tabTextColor="#ffffff">


        <com.google.android.material.tabs.TabItem
            android:id="@+id/provider_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/online"
            android:text="@string/online">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/provider_offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/offline"
            android:text="@string/offline" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/provider_add"
            style="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/adduser"
            android:text="@string/add_new">

        </com.google.android.material.tabs.TabItem>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/provider_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray">

    </androidx.viewpager.widget.ViewPager>


</LinearLayout>