<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFAFA"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="15dp"
    android:paddingRight="30dp"
    android:weightSum="20">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:contentDescription="@string/imgdescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edtxt_name"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:background="#00303F88"
                android:hint="@string/name"

                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLength="@integer/no_length"
                android:textColor="#F80E0D0D"
                android:textColorHint="#2E2C2C"
                android:textCursorDrawable="@android:color/background_light"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edtxt_mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:background="#00303F88"
                android:hint="@string/Mobile_Number"

                android:importantForAutofill="no"
                android:inputType="textNoSuggestions|numberDecimal"
                android:maxLength="@integer/no_length"
                android:textColor="#F80E0D0D"
                android:textColorHint="#2E2C2C"
                android:textCursorDrawable="@android:color/background_light"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edtxt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/common_open_on_phone"
                android:background="#00222B61"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:maxLength="@integer/pass_legth"

                android:textColor="#F80A0A0A"
                android:textColorHint="#363535"
                android:textCursorDrawable="@android:color/background_light"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtxt_mobileNumber"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <Button
        android:id="@+id/add_provider_btn_regiser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@drawable/login_register"
        android:text="@string/register_provider"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />


    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:visibility="invisible" />


</LinearLayout>